--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,7 +6,7 @@ name: Node CI
 on: [push]
 
 jobs:
-    build:
+      build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -19,17 +19,17 @@ jobs:
           name: webpack artifacts
           path: public/
 
-  test:
 
+    test:
+    needs: build
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-2016]
-        node-version: [12.x, 14.x]
-
+    ...
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/download-artifact@main
+      with: 
+        name: webpack artifacts
+        path: public
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
